// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`token snapshot renders 1`] = `
<Fragment>
  <span
    className="tokenRootClass token"
    dangerouslySetInnerHTML={
      Object {
        "__html": "foo bar",
      }
    }
  />
</Fragment>
`;

exports[`token snapshot renders with brs 1`] = `
<Fragment>
  <span
    className="tokenRootClass token"
    dangerouslySetInnerHTML={
      Object {
        "__html": "foo <br>bar",
      }
    }
  />
</Fragment>
`;
